Use gnu99 to compile the C file
This is necessary to be able to use C99 arrays.

--- a/mlp/makefile
+++ b/mlp/makefile
@@ -11,6 +11,8 @@ all: $(TO_BUILD)
 GEL:
 	+make GEL
 
+CFLAGS+=-std=gnu99
+
 #bench_mlp.gch: bench_mlp.hpp $(BASEDIR)/core/memory.gch
 #	$(CXX) $(CXXFLAGS) -c bench_mlp.hpp -o bench_mlp.gch
 
