Add CMake switches for a few PPCG parameters.
This allows the user to define his/her own block sizes, shared memory
usage, etc.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -49,15 +49,15 @@ set( COMMON_LINK_LIBRARIES ${OpenCV_LIBRARIES}
                            ${OPENCL_LIBRARIES}
                            )
 
-pencil_wrap(DEST cvt_color  FILES cvt_color/cvt_color.pencil.c)
-pencil_wrap(DEST dilate     FILES dilate/dilate.pencil.c)
-pencil_wrap(DEST filter2D   FILES filter2D/filter2D.pencil.c)
-pencil_wrap(DEST gaussian   FILES gaussian/gaussian.pencil.c)
-pencil_wrap(DEST histogram  FILES histogram/histogram.pencil.c)
-pencil_wrap(DEST hog        FILES hog/hog.pencil.c)
-pencil_wrap(DEST mlp        FILES mlp/mlp_impl.pencil.c)
-pencil_wrap(DEST resize     FILES resize/resize.pencil.c)
-pencil_wrap(DEST warpAffine FILES warpAffine/warpAffine.pencil.c)
+pencil_wrap(DEST cvt_color  DIM 2 FILES cvt_color/cvt_color.pencil.c)
+pencil_wrap(DEST dilate     DIM 2 FILES dilate/dilate.pencil.c)
+pencil_wrap(DEST filter2D   DIM 2 FILES filter2D/filter2D.pencil.c)
+pencil_wrap(DEST gaussian   DIM 1 FILES gaussian/gaussian.pencil.c)
+pencil_wrap(DEST histogram  DIM 1 FILES histogram/histogram.pencil.c)
+pencil_wrap(DEST hog        DIM 1 FILES hog/hog.pencil.c)
+pencil_wrap(DEST mlp        DIM 2 FILES mlp/mlp_impl.pencil.c)
+pencil_wrap(DEST resize     DIM 2 FILES resize/resize.pencil.c)
+pencil_wrap(DEST warpAffine DIM 2 FILES warpAffine/warpAffine.pencil.c)
 
 set(cvt_color_SOURCES  cvt_color/test_cvt_color.cpp   cvt_color/cvt_color.pencil.h   )
 set(dilate_SOURCES     dilate/test_dilate.cpp         dilate/dilate.pencil.h         )
