--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -114,3 +114,6 @@ target_link_libraries( test_hog        ${COMMON_LINK_LIBRARIES} )
 target_link_libraries( test_mlp        ${COMMON_LINK_LIBRARIES} )
 target_link_libraries( test_resize     ${COMMON_LINK_LIBRARIES} )
 target_link_libraries( test_warpAffine ${COMMON_LINK_LIBRARIES} )
+
+add_custom_command( TARGET test_hog PRE_BUILD COMMAND ${CMAKE_COMMAND} -E copy_if_different ${CMAKE_CURRENT_SOURCE_DIR}/hog/hog.opencl.cl ${CMAKE_CURRENT_BINARY_DIR}/kernels/hog.opencl.cl)
+add_custom_command( TARGET test_mlp PRE_BUILD COMMAND ${CMAKE_COMMAND} -E copy_if_different ${CMAKE_CURRENT_SOURCE_DIR}/mlp/mlp_impl.cl   ${CMAKE_CURRENT_BINARY_DIR}/kernels/mlp_impl.cl  )
