--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -28,8 +28,7 @@ find_package(OpenCL REQUIRED)
 set(Boost_USE_STATIC_LIBS       OFF)
 set(Boost_USE_MULTITHREADED      ON)
 set(Boost_USE_STATIC_RUNTIME    OFF)
-set(Boost_ADDITIONAL_VERSIONS "1.54" "1.54.0" "1.55" "1.55.0")
-find_package(Boost 1.54.0 REQUIRED filesystem serialization system)
+find_package(Boost REQUIRED filesystem system)
 
 ######################### Add project files ##########################
 
@@ -53,7 +52,6 @@ pencil_wrap(DEST filter2D   DIM 2 FILES filter2D/filter2D.pencil.c)
 pencil_wrap(DEST gaussian   DIM 1 FILES gaussian/gaussian.pencil.c)
 pencil_wrap(DEST histogram  DIM 1 FILES histogram/histogram.pencil.c)
 pencil_wrap(DEST hog        DIM 1 FILES hog/hog.pencil.c)
-pencil_wrap(DEST mlp        DIM 2 FILES mlp/mlp_impl.pencil.c)
 pencil_wrap(DEST resize     DIM 2 FILES resize/resize.pencil.c)
 pencil_wrap(DEST warpAffine DIM 2 FILES warpAffine/warpAffine.pencil.c)
 
@@ -67,19 +65,6 @@ set(hog_SOURCES hog/HogDescriptor.cpp
                 hog/hog.pencil.h
                 hog/HogDescriptor.h
                 )
-set(mlp_SOURCES mlp/allocator.cpp
-                mlp/serialization.cpp
-                mlp/test_mlp.cpp
-                mlp/cltypes.h
-                mlp/mlp_impl_pencil.h
-                mlp/allocator.hpp
-                mlp/bench_mlp.hpp
-                mlp/memory.hpp
-                mlp/mlp.hpp
-                mlp/serialization.hpp
-                mlp/GEL/histo_impl.h
-                mlp/GEL/histo.h
-                )
 set(resize_SOURCES     resize/test_resize.cpp         resize/resize.pencil.h         )
 set(warpAffine_SOURCES warpAffine/test_warpAffine.cpp warpAffine/warpAffine.pencil.h )
 
@@ -89,7 +74,6 @@ add_executable(test_filter2D   ${filter2D_SOURCES}   ${filter2D_GEN_SOURCES}   )
 add_executable(test_gaussian   ${gaussian_SOURCES}   ${gaussian_GEN_SOURCES}   )
 add_executable(test_histogram  ${histogram_SOURCES}  ${histogram_GEN_SOURCES}  )
 add_executable(test_hog        ${hog_SOURCES}        ${hog_GEN_SOURCES}        )
-add_executable(test_mlp        ${mlp_SOURCES}        ${mlp_GEN_SOURCES}        )
 add_executable(test_resize     ${resize_SOURCES}     ${resize_GEN_SOURCES}     )
 add_executable(test_warpAffine ${warpAffine_SOURCES} ${warpAffine_GEN_SOURCES} )
 
@@ -99,7 +83,6 @@ target_include_directories( test_filter2D   PRIVATE ${COMMON_INCLUDE_DIRS} ${CMA
 target_include_directories( test_gaussian   PRIVATE ${COMMON_INCLUDE_DIRS} ${CMAKE_CURRENT_SOURCE_DIR}/gaussian   ${gaussian_GEN_INCLUDE_DIRS}   )
 target_include_directories( test_histogram  PRIVATE ${COMMON_INCLUDE_DIRS} ${CMAKE_CURRENT_SOURCE_DIR}/histogram  ${histogram_GEN_INCLUDE_DIRS}  )
 target_include_directories( test_hog        PRIVATE ${COMMON_INCLUDE_DIRS} ${CMAKE_CURRENT_SOURCE_DIR}/hog        ${hog_GEN_INCLUDE_DIRS}        )
-target_include_directories( test_mlp        PRIVATE ${COMMON_INCLUDE_DIRS} ${CMAKE_CURRENT_SOURCE_DIR}/mlp        ${mlp_GEN_INCLUDE_DIRS}        )
 target_include_directories( test_resize     PRIVATE ${COMMON_INCLUDE_DIRS} ${CMAKE_CURRENT_SOURCE_DIR}/resize     ${resize_GEN_INCLUDE_DIRS}     )
 target_include_directories( test_warpAffine PRIVATE ${COMMON_INCLUDE_DIRS} ${CMAKE_CURRENT_SOURCE_DIR}/warpAffine ${warpAffine_GEN_INCLUDE_DIRS} )
 
@@ -109,9 +92,7 @@ target_link_libraries( test_filter2D   ${COMMON_LINK_LIBRARIES} )
 target_link_libraries( test_gaussian   ${COMMON_LINK_LIBRARIES} )
 target_link_libraries( test_histogram  ${COMMON_LINK_LIBRARIES} )
 target_link_libraries( test_hog        ${COMMON_LINK_LIBRARIES} )
-target_link_libraries( test_mlp        ${COMMON_LINK_LIBRARIES} )
 target_link_libraries( test_resize     ${COMMON_LINK_LIBRARIES} )
 target_link_libraries( test_warpAffine ${COMMON_LINK_LIBRARIES} )
 
 add_custom_command( TARGET test_hog PRE_BUILD COMMAND ${CMAKE_COMMAND} -E copy_if_different ${CMAKE_CURRENT_SOURCE_DIR}/hog/hog.opencl.cl ${CMAKE_CURRENT_BINARY_DIR}/kernels/hog.opencl.cl)
-add_custom_command( TARGET test_mlp PRE_BUILD COMMAND ${CMAKE_COMMAND} -E copy_if_different ${CMAKE_CURRENT_SOURCE_DIR}/mlp/mlp_impl.cl   ${CMAKE_CURRENT_BINARY_DIR}/kernels/mlp_impl.cl  )
