Add possibility to override polyhedral compilation flags individually.
Also update README.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -46,14 +46,23 @@ set( COMMON_LINK_LIBRARIES ${OpenCV_LIBRARIES}
                            ${OPENCL_LIBRARIES}
                            )
 
-pencil_wrap(DEST cvt_color  DIM 2 FILES cvt_color/cvt_color.pencil.c)
-pencil_wrap(DEST dilate     DIM 2 FILES dilate/dilate.pencil.c)
-pencil_wrap(DEST filter2D   DIM 2 FILES filter2D/filter2D.pencil.c)
-pencil_wrap(DEST gaussian   DIM 1 FILES gaussian/gaussian.pencil.c)
-pencil_wrap(DEST histogram  DIM 1 FILES histogram/histogram.pencil.c)
-pencil_wrap(DEST hog        DIM 1 FILES hog/hog.pencil.c)
-pencil_wrap(DEST resize     DIM 2 FILES resize/resize.pencil.c)
-pencil_wrap(DEST warpAffine DIM 2 FILES warpAffine/warpAffine.pencil.c)
+set(PENCIL_FLAGS_cvt_color  "" CACHE STRING "PENCIL compilation flags for cvt_color  - This is additional to PENCIL_REQUIRED_FLAGS. If not set, PENCIL_DEFAULT_* flags are used.")
+set(PENCIL_FLAGS_dilate     "" CACHE STRING "PENCIL compilation flags for dilate     - This is additional to PENCIL_REQUIRED_FLAGS. If not set, PENCIL_DEFAULT_* flags are used.")
+set(PENCIL_FLAGS_filter2D   "" CACHE STRING "PENCIL compilation flags for filter2D   - This is additional to PENCIL_REQUIRED_FLAGS. If not set, PENCIL_DEFAULT_* flags are used.")
+set(PENCIL_FLAGS_gaussian   "" CACHE STRING "PENCIL compilation flags for gaussian   - This is additional to PENCIL_REQUIRED_FLAGS. If not set, PENCIL_DEFAULT_* flags are used.")
+set(PENCIL_FLAGS_histogram  "" CACHE STRING "PENCIL compilation flags for histogram  - This is additional to PENCIL_REQUIRED_FLAGS. If not set, PENCIL_DEFAULT_* flags are used.")
+set(PENCIL_FLAGS_hog        "" CACHE STRING "PENCIL compilation flags for hog        - This is additional to PENCIL_REQUIRED_FLAGS. If not set, PENCIL_DEFAULT_* flags are used.")
+set(PENCIL_FLAGS_resize     "" CACHE STRING "PENCIL compilation flags for resize     - This is additional to PENCIL_REQUIRED_FLAGS. If not set, PENCIL_DEFAULT_* flags are used.")
+set(PENCIL_FLAGS_warpAffine "" CACHE STRING "PENCIL compilation flags for warpAffine - This is additional to PENCIL_REQUIRED_FLAGS. If not set, PENCIL_DEFAULT_* flags are used.")
+
+pencil_wrap(DEST cvt_color  FLAGS ${PENCIL_FLAGS_cvt_color}  FILES cvt_color/cvt_color.pencil.c)
+pencil_wrap(DEST dilate     FLAGS ${PENCIL_FLAGS_dilate}     FILES dilate/dilate.pencil.c)
+pencil_wrap(DEST filter2D   FLAGS ${PENCIL_FLAGS_filter2D}   FILES filter2D/filter2D.pencil.c)
+pencil_wrap(DEST gaussian   FLAGS ${PENCIL_FLAGS_gaussian}   FILES gaussian/gaussian.pencil.c)
+pencil_wrap(DEST histogram  FLAGS ${PENCIL_FLAGS_histogram}  FILES histogram/histogram.pencil.c)
+pencil_wrap(DEST hog        FLAGS ${PENCIL_FLAGS_hog}        FILES hog/hog.pencil.c)
+pencil_wrap(DEST resize     FLAGS ${PENCIL_FLAGS_resize}     FILES resize/resize.pencil.c)
+pencil_wrap(DEST warpAffine FLAGS ${PENCIL_FLAGS_warpAffine} FILES warpAffine/warpAffine.pencil.c)
 
 set(cvt_color_SOURCES  cvt_color/test_cvt_color.cpp   cvt_color/cvt_color.pencil.h   )
 set(dilate_SOURCES     dilate/test_dilate.cpp         dilate/dilate.pencil.h         )
