Add clarifications to the README and the scripts_configuration file
Signed-off-by: Riyadh Baghdadi <baghdadi.mr@gmail.com>

--- a/scripts/scripts_config.conf
+++ b/scripts/scripts_config.conf
@@ -9,6 +9,17 @@ OPENCL_INCLUDE_DIR=
 OPENCV_INCLUDE_DIR=
 OPENCV_LIB_DIR=
 
+# Example of Path Configuration
+##################################
+# Leave the variable undefined for the default path.
+# PENCIL_COMPILER_BINARY=~/src/ppcgs/pencil-driver-0.2/ppcg/ppcg
+# PENCIL_INCLUDE_DIR=~/src/ppcgs/pencil-driver-0.2/pencil-util/prefix/include/
+# PRL_LIB_DIR=~/src/ppcgs/pencil-driver-0.2/pencil-util/prefix/lib/
+# OPENCL_LIB_DIR=
+# OPENCL_INCLUDE_DIR=/usr/local/cuda-5.5/include/
+# OPENCV_INCLUDE_DIR=
+# OPENCV_LIB_DIR=
+
 # List of kernels to compile or to tune (blank separated, use the kernel folder names)
 LIST_OF_KERNELS="resize dilate cvt_color warpAffine filter2D gaussian histogram"
 
@@ -17,6 +28,7 @@ NB_RUNS=10
 
 # Tuning options.
 ##################
+# Tune tile and Block sizes: 1 or 0
 TUNE_TILE_AND_BLOCK_SIZES=1
 POSSIBLE_BLOCK_SIZES="4,4  16,16  32,4  32,32  64,16"
 POSSIBLE_TILE_SIZES="4,4  16,16  32,32  64,64  128,128"
@@ -32,5 +44,5 @@ MALI_ARCHITECTURE=0
 
 # Notes:
 #########
-# - Do not leave any space between the variable definition and the value.
+# - Do not leave any space between the variable definition and its value.
 #
