--- a/scripts/scripts_config.conf
+++ b/scripts/scripts_config.conf
@@ -21,7 +21,7 @@ OPENCV_LIB_DIR=
 # OPENCV_LIB_DIR=
 
 # List of kernels to compile or to tune (blank separated, use the kernel folder names)
-LIST_OF_KERNELS="resize dilate cvt_color warpAffine filter2D gaussian histogram"
+LIST_OF_KERNELS="resize dilate cvt_color warpAffine filter2D gaussian histogram hog"
 
 # Run each kernel $NB_RUNS times (use more runs to get more stable results).
 NB_RUNS=10
