Add PRL_INCLUDE_DIR variable

--- a/scripts/scripts_config.conf
+++ b/scripts/scripts_config.conf
@@ -4,6 +4,7 @@
 PENCIL_COMPILER_BINARY=
 PENCIL_INCLUDE_DIR=
 PRL_LIB_DIR=
+PRL_INCLUDE_DIR=
 OPENCL_LIB_DIR=
 OPENCL_INCLUDE_DIR=
 OPENCV_INCLUDE_DIR=
@@ -15,6 +16,7 @@ OPENCV_LIB_DIR=
 # PENCIL_COMPILER_BINARY=~/src/ppcgs/pencil-driver-0.2/ppcg/ppcg
 # PENCIL_INCLUDE_DIR=~/src/ppcgs/pencil-driver-0.2/pencil-util/prefix/include/
 # PRL_LIB_DIR=~/src/ppcgs/pencil-driver-0.2/pencil-util/prefix/lib/
+# PRL_INCLUDE_DIR=~/src/ppcgs/pencil-driver-0.2/pencil-util/prefix/include/
 # OPENCL_LIB_DIR=
 # OPENCL_INCLUDE_DIR=/usr/local/cuda-5.5/include/
 # OPENCV_INCLUDE_DIR=
