Rename a variable in configuration file: MALI_ARCHITECTURE to USE_ARM_MALI_OPENCL_LIBRARIES

--- a/scripts/scripts_config.conf
+++ b/scripts/scripts_config.conf
@@ -41,8 +41,8 @@ TUNE_PRIVATE_MEMORY=0
 # Default test image.
 TEST_IMAGE=$BENCHMARK_ROOT_DIRECTORY/images/M104_ngc4594_sombrero_galaxy_hi-res.jpg
 
-# Set to true if you are runing the benchmark on mali
-MALI_ARCHITECTURE=0
+# Set to true if you are runing the benchmark on ARM mali
+USE_ARM_MALI_OPENCL_LIBRARIES=0
 
 # Notes:
 #########
